# can_daemon_rust

./: Cargo.toml  README.md
.github/workflows/: ci.yml  header-check.yml
.zed/: tasks.json
scripts/: add_headers.sh  check_headers.sh
src/: main.rs
src/app/: mod.rs  service.rs
src/domain/: frame.rs  mod.rs  protocol.rs
src/infra/: discovery_netlink.rs  discovery_stub.rs  fake_generator.rs  mod.rs  socketcan_rx.rs  socketcan_tx.rs  transport_grpc.rs  transport_tcp.rs
src/ports/: can_tx.rs  discovery.rs  mod.rs
test/: README.md  ci_tcp_integration.py  pyproject.toml  test_can_bridge.py  test_can_bridge_grpc.py  test_can_bridge_ws.py
test/proto/: can_bridge_pb2.py  can_bridge_pb2_grpc.py
