[package]
name = "can_bridge_daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "io-util", "signal"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version="0.3", features=["env-filter"] }

# WebSocket server
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"

# SocketCAN + netlink discovery
socketcan = "3.5.0"
rtnetlink = "0.14"
netlink-packet-route = "0.19"

# Replay (candump log parsing)
regex = "1"

# Needed for socket cache management: socketcan_tx.rs: `SocketCanTx`
nix =  { version = "0.30.1", default-features = false, features = ["fs"] }
