[project]
name = "python-tests"
version = "0.1.0"
description = "Integration tests to test CAN Daemon"
authors = [
    {name = "sdsingh.developer@gmail.com"}
]
license = {text = "Apache 2.0"}
requires-python = ">=3.12"
dependencies = [
    "grpcio (>=1.76.0,<2.0.0)",
    "grpcio-tools (>=1.76.0,<2.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "websocket-client (>=1.9.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
